[package]
name = "goto-cd"
version = "0.1.0"
authors = ["Henrik 'CatEars' Adolfsson <catears13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
toml = "0.5.3"
serde = { version = "1.0.117", features = ["derive"] }