[package]
name = "goto-cd"
version = "0.1.0"
authors = ["Henrik 'CatEars' Adolfsson <catears13@gmail.com>"]
description = "Teleportation for the command-line"
homepage = "https://github.com/CatEars/goto"
documentation = "https://github.com/CatEars/goto/tree/master/docs"
repository = "https://github.com/CatEars/goto"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = ["bookmark", "CLI", "terminal"]
categories = ["command-line-utilities"]
include = ["src/**/*", "README.md", "changelog.txt", "LICENSE", "docs/manual/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
dirs-next = "2.0.0"
toml = "0.5.3"
serde = { version = "1.0.117", features = ["derive"] }
clap = "3.0.0-beta.2"
term = "0.6.1"
rust-embed = "5.7.0"
dunce = "1.0.2"